--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!-- index.html 2.2.8 -->
+﻿<!-- index.html 2.2.9 -->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -232,27 +232,33 @@
 
             <!-- AUDIO OUTPUT -->
             <div id="control-area-volume" class="control-area">
-                <p data-label-id="audio-output"></p>
-                <!-- アイテムごとの音量スライダー（各アイテムの基本設定） -->
+                <p data-label-id="audio-output-level"></p>
+                <!-- アイテムフェーダー -->
                 <div class="controls">
                     <p for="on-air-item-volume-slider">ITEM</p>
                     <input id="on-air-item-volume-slider" class="on-air-item-volume-slider" type="range" min="0" max="100" value="100" data-tooltip-id="on-air-item-volume-slider">
                     <span id="on-air-item-volume-value" class="volume-value">100%</span>
                 </div>
-                <!-- マスターフェーダー（グローバル操作） -->
+                <!-- アイテムフェード操作 -->
+                <div class="controls fade-controls item-fade">
+                    <button id="on-air-item-fo-button" class="button button-gray" data-tooltip-id="on-air-item-fo-button" data-label-id="on-air-item-fo-button"></button>
+                    <div class="fifo-dummy"></div>
+                    <button id="on-air-item-fi-button" class="button button-gray" data-tooltip-id="on-air-item-fi-button" data-label-id="on-air-item-fi-button"></button>
+                </div>
+                <!-- マスターフェーダー -->
                 <div class="controls">
                     <p for="on-air-item-volume-slider">MAIN</p>
                     <input id="on-air-master-volume-slider" class="on-air-master-volume-slider master-slider" type="range" min="0" max="100" value="100" data-tooltip-id="on-air-master-volume-slider">
-
                     <span id="on-air-master-volume-value" class="volume-value">100%</span>
                 </div>
-                <div class="controls">
+                <!-- マスターフェード操作 -->
+                <div class="controls fade-controls">
                     <button id="on-air-fo-button" class="button button-gray" data-tooltip-id="on-air-fo-button" data-label-id="on-air-fo-button"></button>
-                    <input type="number" id="fioRate" min="0.1" step="0.1" value="1.0" class="fio-rate-input" aria-label="FADEIN/OUT RATE" data-tooltip-id="fioRate" data-label-id="fioRate">
+                    <input type="number" id="fioRate" min="0.1" step="0.1" value="1.0" class="fio-rate-input"
+                           aria-label="FADEIN/OUT RATE" data-tooltip-id="fioRate" data-label-id="fioRate">
                     <button id="on-air-fi-button" class="button button-gray" data-tooltip-id="on-air-fi-button" data-label-id="on-air-fi-button"></button>
                 </div>
             </div>
-
 
             <!-- 再生速度コントローラー -->
             <div id="playback-speed-control" class="control-area">
@@ -267,7 +273,7 @@
             <div id="control-area" class="control-area">
                 <p data-label-id="fullscreen-shot"></p>
                 <div class="controls">
-                    <button id="captuer-button" class="button button button-gray" data-tooltip-id="captuer-button" data-label-id="captuer-button"></button>
+                    <button id="captuer-button" class="button button-gray" data-tooltip-id="captuer-button" data-label-id="captuer-button"></button>
                     <!-- <button id="rec-button" class="button button button-gray" data-tooltip-id="rec-button" data-label-id="rec-button">REC</button> -->
                 </div>
             </div>
