Add Add recording feature

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -24,6 +24,7 @@
 </head>
 <body>
     <video id="fullscreen-video"></video>
+    <script src="recorder.js" defer></script>
     <script src="fullscreen.js"></script>
 </body>
 </html>
