--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; img-src 'self' data:; media-src 'self' safe-file:;">
     <title>VTR-PON  2</title>
     <link rel="stylesheet" href="style.css">
-    <script src="recorder.js" defer></script>
     <script src="messages.js"></script>
     <script src="messageManager.js" defer></script>
     <script src="labels.js"></script>
@@ -274,7 +273,7 @@
                 <p data-label-id="fullscreen-shot"></p>
                 <div class="controls">
                     <button id="captuer-button" class="button button-gray" data-tooltip-id="captuer-button" data-label-id="captuer-button"></button>
-                    <!-- <button id="rec-button" class="button button button-gray" data-tooltip-id="rec-button" data-label-id="rec-button">REC</button> -->
+                    <button id="rec-button" class="button button button-gray" data-tooltip-id="rec-button" data-label-id="rec-button">REC</button>
                 </div>
             </div>
 
