Add recording feature

--- a/index.html
+++ b/index.html
@@ -123,6 +123,14 @@
                     <input type="number" id="fadeInDuration" min="1" step="1" value="1" class="pngtomp4-duration-input" aria-label="PNG to MP4 Duration" data-tooltip-id="fadeInDuration" data-label-id="fadeInDuration">
                 </div>
             </div>
+            <div id="control-area" class="control-area">
+                <p data-label-id="dsk-title">DOWN STREAM KEY</p>
+                <div class="controls">
+                    <button id="dsk-button" class="button button button-gray" data-tooltip-id="dsk-button" data-label-id="dsk-button">DSK</button>
+                    <button id="dks-pause-button" class="button control-button button-gray">||</button>
+                    <button id="dsk-play-button" class="button control-button button-gray">&gt;</button>
+                </div>
+            </div>
 
         </div>
 
@@ -273,7 +281,7 @@
                 <p data-label-id="fullscreen-shot"></p>
                 <div class="controls">
                     <button id="captuer-button" class="button button-gray" data-tooltip-id="captuer-button" data-label-id="captuer-button"></button>
-                    <button id="rec-button" class="button button button-gray" data-tooltip-id="rec-button" data-label-id="rec-button">REC</button>
+                    <button id="rec-button" class="button button button-gray" data-tooltip-id="rec-button" data-label-id="rec-button">/button>
                 </div>
             </div>
 
