Add DSK functionality

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -21,6 +21,7 @@
                 mix-blend-mode: lighten; /* 黒背景が見えなくなる */
             }
         </style>
+    <script src="dsk.js" defer></script>
 </head>
 <body>
     <video id="fullscreen-video"></video>
