--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <script src="labelManager.js" defer></script>
     <script src="tooltips.js"></script>
     <script src="tooltipManager.js" defer></script>
+    <script src="dsk.js" defer></script>
     <script src="playlist.js" defer></script>
     <script src="listedit.js" defer></script>
     <script src="onair.js" defer></script>
     <script src="uvc.js" defer></script>
     <script src="pngtomp4.js" defer></script>
     <script src="pptxtomp4.js" defer></script>
+    
     <script src="movtowebm.js" defer></script>
     <script src="capture.js" defer></script>
     <script src="renderer.js" defer></script>
@@ -123,17 +125,14 @@
                     <input type="number" id="fadeInDuration" min="1" step="1" value="1" class="pngtomp4-duration-input" aria-label="PNG to MP4 Duration" data-tooltip-id="fadeInDuration" data-label-id="fadeInDuration">
                 </div>
             </div>
-            <!-- 
             <div id="control-area" class="control-area">
                 <p data-label-id="dsk-title">DOWN STREAM KEY</p>
                 <div class="controls">
-                    <button id="dsk-button" class="button button button-gray" data-tooltip-id="dsk-button" data-label-id="dsk-button">DSK</button>
-                    <button id="dks-pause-button" class="button control-button button-gray">||</button>
-                    <button id="dsk-play-button" class="button control-button button-gray">&gt;</button>
+                    <button id="dsk-button" class="button button button-gray" data-tooltip-id="dsk-button" data-label-id="dsk-button"></button>
+                    <button id="dks-pause-button" class="button control-button button-gray" data-tooltip-id="dks-pause-button" data-label-id="dks-pause-button">||</button>
+                    <button id="dsk-play-button" class="button control-button button-gray" data-tooltip-id="dsk-play-button" data-label-id="dsk-play-button">&gt;</button>
                 </div>
             </div>
-             -->
-
         </div>
 
         <!-- プレイリストエリア -->
