Prevent playback pause by disabling background throttling

--- a/recordingSettings.html
+++ b/recordingSettings.html
@@ -26,7 +26,7 @@
     
     <!-- File Name Prefix -->
     <div class="field-col">
-      <label for="recordingPrefixInput">FILE NAME PREFIx</label>
+      <label for="recordingPrefixInput">FILE NAME PREFIX</label>
     </div>
     <div class="field-col">
       <input type="text" id="recordingPrefixInput">
