--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!-- index.html 2.2.9 -->
+﻿<!-- index.html 2.3.1 -->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -21,7 +21,6 @@
     <script src="uvc.js" defer></script>
     <script src="pngtomp4.js" defer></script>
     <script src="pptxtomp4.js" defer></script>
-    
     <script src="movtowebm.js" defer></script>
     <script src="capture.js" defer></script>
     <script src="renderer.js" defer></script>
@@ -262,8 +261,7 @@
                 <!-- マスターフェード操作 -->
                 <div class="controls fade-controls">
                     <button id="on-air-fo-button" class="button button-gray" data-tooltip-id="on-air-fo-button" data-label-id="on-air-fo-button"></button>
-                    <input type="number" id="fioRate" min="0.1" step="0.1" value="1.0" class="fio-rate-input"
-                           aria-label="FADEIN/OUT RATE" data-tooltip-id="fioRate" data-label-id="fioRate">
+                    <input type="number" id="fioRate" min="0.1" step="0.1" value="1.0" class="ftb-rate-input" aria-label="FADEIN/OUT RATE" data-tooltip-id="fioRate" data-label-id="fioRate">
                     <button id="on-air-fi-button" class="button button-gray" data-tooltip-id="on-air-fi-button" data-label-id="on-air-fi-button"></button>
                 </div>
             </div>
