Fix capture button id

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <div id="control-area" class="control-area">
                 <p data-label-id="fullscreen-shot"></p>
                 <div class="controls">
-                    <button id="captuer-button" class="button button-gray" data-tooltip-id="captuer-button" data-label-id="captuer-button"></button>
+                    <button id="capture-button" class="button button-gray" data-tooltip-id="capture-button" data-label-id="capture-button"></button>
                     <button id="rec-button" class="button button button-gray" data-tooltip-id="rec-button" data-label-id="rec-button">/button>
                 </div>
             </div>
