Fix rec-button closing tag in index.html

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <p data-label-id="fullscreen-shot"></p>
                 <div class="controls">
                     <button id="captuer-button" class="button button-gray" data-tooltip-id="captuer-button" data-label-id="captuer-button"></button>
-                    <button id="rec-button" class="button button button-gray" data-tooltip-id="rec-button" data-label-id="rec-button">/button>
+                    <button id="rec-button" class="button button button-gray" data-tooltip-id="rec-button" data-label-id="rec-button"></button>
                 </div>
             </div>
 
