--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!-- index.html 2.3.1 -->
+﻿<!-- index.html 2.3.3 -->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -280,7 +280,7 @@
                 <p data-label-id="fullscreen-shot"></p>
                 <div class="controls">
                     <button id="capture-button" class="button button-gray" data-tooltip-id="capture-button" data-label-id="capture-button"></button>
-                    <button id="rec-button" class="button button button-gray" data-tooltip-id="rec-button" data-label-id="rec-button">/button>
+                    <button id="rec-button" class="button button button-gray" data-tooltip-id="rec-button" data-label-id="rec-button"></button>
                 </div>
             </div>
 
