Refactor ATEM integration: independent control & auto-on-air flags

--- a/atemsettings.html
+++ b/atemsettings.html
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+﻿ <!-- atemsettings.html 2.3.4 -->
+  
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8" />
   <title>ATEM Connection</title>
-  <!-- devicesettings.css を読み込む -->
   <link rel="stylesheet" href="devicesettings.css" />
 </head>
 <body>
@@ -11,19 +12,19 @@
     <h2>ATEM Connection</h2>
 
     <div class="field-col">
-      <label for="atem-enable">
-        <input type="checkbox" id="atem-enable" />
-        ATEM Connection Enable
+      <label for="atem-control-enable">
+        <input type="checkbox" id="atem-control-enable" />
+        VTR-PON → ATEM Control
       </label>
     </div>
 
     <div class="field-col">
-      <label for="atem-auto">
-        <input type="checkbox" id="atem-auto" />
-        Auto OnAir on Switch
+      <label for="atem-auto-switch-enable">
+        <input type="checkbox" id="atem-auto-switch-enable" />
+        ATEM → VTR-PON Control
       </label>
     </div>
-    
+
     <div class="field-col">
       <label for="atem-ip">IP Address</label>
       <input
