--- a/atemsettings.html
+++ b/atemsettings.html
@@ -1,4 +1,4 @@
-﻿ <!-- atemsettings.html 2.3.4 -->
+﻿ <!-- atemsettings.html 2.3.5 -->
   
 <!DOCTYPE html>
 <html>
@@ -50,8 +50,46 @@
         <option value="6">6</option>
         <option value="7">7</option>
         <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="12">12</option>
+        <option value="13">13</option>
+        <option value="14">14</option>
+        <option value="15">15</option>
+        <option value="16">16</option>
+        <option value="17">17</option>
+        <option value="18">18</option>
+        <option value="19">19</option>
+        <option value="20">20</option>
+        <option value="21">21</option>
+        <option value="22">22</option>
+        <option value="23">23</option>
+        <option value="24">24</option>
+        <option value="25">25</option>
+        <option value="26">26</option>
+        <option value="27">27</option>
+        <option value="28">28</option>
+        <option value="29">29</option>
+        <option value="30">30</option>
+        <option value="31">31</option>
+        <option value="32">32</option>
+        <option value="33">33</option>
+        <option value="34">34</option>
+        <option value="35">35</option>
+        <option value="36">36</option>
+        <option value="37">37</option>
+        <option value="38">38</option>
+        <option value="39">39</option>
+        <option value="40">40</option>
       </select>
     </div>
+
+    <div class="field-col">
+      <label for="atem-delay">Switch Delay (ms)</label>
+      <input type="number" id="atem-delay" min="-9990" max="9990" step="10" />
+    </div>
+
 
     <div class="field-col">
       <button id="save-btn">Save</button>
