--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <script src="movtowebm.js" defer></script>
     <script src="capture.js" defer></script>
     <script src="renderer.js" defer></script>
+    <style>
+      html { font-size: 16px; }
+    </style>
 </head>
 <body>
     <div class="grid-container">
