Update DSK UI labels

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!-- index.html 2.3.3 -->
+﻿<!-- index.html 2.3.6 -->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div id="control-area" class="control-area">
-                <p data-label-id="dsk-title">DOWN STREAM KEY</p>
+                <p data-label-id="dsk-title"></p>
                 <div class="controls">
                     <button id="dsk-button" class="button button button-gray" data-tooltip-id="dsk-button" data-label-id="dsk-button"></button>
                     <button id="dks-pause-button" class="button control-button button-gray" data-tooltip-id="dks-pause-button" data-label-id="dks-pause-button">||</button>
