--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https://worldtimeapi.org; script-src 'self' 'unsafe-inline'; img-src 'self' data:; media-src 'self' safe-file:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https://worldtimeapi.org; script-src 'self' 'unsafe-inline'; img-src 'self' data:; media-src 'self' safe-file: blob:;">
     <title>VTR-PON  2</title>
     <link rel="stylesheet" href="style.css">
     <script src="messages.js"></script>
