Add checkbox to control restoring ATEM settings on next startup

--- a/atemsettings.html
+++ b/atemsettings.html
@@ -91,6 +91,13 @@
     </div>
 
     <div class="field-col">
+      <label for="restoreOnStartup">
+        <input type="checkbox" id="restoreOnStartup" />
+        Restore on next startup
+      </label>
+    </div>
+
+    <div class="field-col">
       <button id="save-btn">Save</button>
     </div>
     <div class="field-col">
