fix(onair): stabilize volume meter with dB-linear mapping, fixed color bands, and peak hold

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                 <video id="on-air-video" muted></video>
                 <canvas id="fade-canvas"></canvas>
                 <div id="on-air-volume-bar" class="volume-bar"></div>
+                <!--デバッグ用音量数値表示 <div id="on-air-volume-readout" class="small"></div> -->
             </div>
 
             <div class="info-bar">
