fix(tooltips): Fix tooltip display

--- a/index.html
+++ b/index.html
@@ -159,12 +159,11 @@
                     <button id="soundpad-mode-button" class="button button button-gray" data-tooltip-id="soundpad-mode-button" data-label-id="soundpad-mode-button"></button>
                     <button id="fillkey-mode-button" class="button button button-gray" data-tooltip-id="fillkey-mode-button" data-label-id="fillkey-mode-button"></button>
                     <!-- FILKEYプルダウン-->
-                    <select id="fillkey-color-picker" class="custom-select">
+                    <select id="fillkey-color-picker" class="custom-select" data-tooltip-id="fillkey-color-picker">
                       <option value="#00FF00">G</option>
                       <option value="#0000FF">B</option>
                       <option value="#FFFFFF">W</option>
                     </select>
-
                 </div>
             </div>
             <div id="playlistsave-area" class="playlistsave-area">
