decouple start-mode fade-in duration from FTB fade duration

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!-- index.html 2.4.0 -->
+﻿<!-- index.html 2.4.2 -->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -90,6 +90,7 @@
                     <button id="start-pause-button" class="button button button-gray" data-tooltip-id="start-pause-button" data-label-id="start-pause-button"></button>
                     <button id="start-play-button" class="button button button-gray" data-tooltip-id="start-play-button" data-label-id="start-play-button"></button>
                     <button id="start-fadein-button" class="button button button-gray" data-tooltip-id="start-fadein-button" data-label-id="start-fadein-button"></button>
+                    <input type="number" id="startFadeInSec" min="0.1" step="0.1" value="1.0" class="ftb-rate-input" aria-label="Start Fade-in (sec)" data-tooltip-id="startFadeInSec" data-label-id="startFadeInSec">
                 </div>
             </div>
 
