--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                     <button id="end-off-button" class="button button button-gray" data-tooltip-id="end-off-button" data-label-id="end-off-button"></button>
                     <button id="end-pause-button" class="button button button-gray" data-tooltip-id="end-pause-button" data-label-id="end-pause-button"></button>
                     <button id="end-repeat-button" class="button button button-gray" data-tooltip-id="end-repeat-button" data-label-id="end-repeat-button"></button>
+                    <!-- <input type="number" id="repeatCount" min="1" step="1" placeholder="∞" class="ftb-rate-input" aria-label="Repeat Count" data-tooltip-id="repeatCount" data-label-id="repeatCount" oninput="document.body.dataset.repeatFinite = (this.value && parseInt(this.value,10)>0) ? '1' : ''"> -->
                     <button id="end-next-button" class="button button button-gray" data-tooltip-id="end-next-button" data-label-id="end-next-button"></button>
                     <button id="end-ftb-button" class="button button button-gray" data-tooltip-id="end-ftb-button" data-label-id="end-ftb-button"></button>
                     <input type="number" id="ftbRate" min="0.1" step="0.1" value="1.0" class="ftb-rate-input" aria-label="FTB Rate" data-tooltip-id="ftbRate" data-label-id="ftbRate">
