--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!-- index.html 2.4.4 -->
+﻿<!-- index.html 2.4.5 -->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -291,6 +291,15 @@
                 <div class="controls">
                     <input id="playback-speed-slider" type="range" min="-16" max="16" value="0" step="0.1" data-tooltip-id="playback-speed-slider" data-label-id="playback-speed-slider">
                     <input id="playback-speed-input" type="number" step="0.01" value="1.00" data-tooltip-id="playback-speed-input" data-label-id="playback-speed-input">
+                </div>
+                <div class="controls" id="playback-speed-buttons">
+                    <button class="button button-gray speed-btn" data-rate="0.5">0.5</button>
+                    <button class="button button-gray speed-btn" data-rate="0.75">0.75</button>
+                    <button class="button button-gray speed-btn" data-rate="1">1</button>
+                    <button class="button button-gray speed-btn" data-rate="1.25">1.25</button>
+                    <button class="button button-gray speed-btn" data-rate="1.5">1.50</button>
+                    <button class="button button-gray speed-btn" data-rate="2">2</button>
+                    <button class="button button-gray speed-btn" data-rate="5">5</button>
                 </div>
             </div>
 
