feat(pptxtomp4): add PPTX dissolve option with UI label, styling, and tooltips

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!-- index.html 2.4.5 -->
+﻿<!-- index.html 2.4.6 -->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -132,6 +132,8 @@
                 <div class="controls">
                     <button id="still-button" class="button button button-gray" data-tooltip-id="still-button" data-label-id="still-button"></button>
                     <input type="number" id="fadeInDuration" min="1" step="1" value="1" class="pngtomp4-duration-input" aria-label="PNG to MP4 Duration" data-tooltip-id="fadeInDuration" data-label-id="fadeInDuration">
+                    <span id="pptxDissolveLabel" data-label-id="pptxDissolve"></span>
+                    <input type="checkbox" id="pptxDissolve" data-tooltip-id="pptxDissolve">
                 </div>
             </div>
             <div id="control-area" class="control-area">
