refactor(ui): unify modal styles, add common CSS, and polish PFL warning dialog

--- a/atemsettings.html
+++ b/atemsettings.html
@@ -1,11 +1,11 @@
-﻿ <!-- atemsettings.html 2.3.7 -->
+﻿ <!-- atemsettings.html 2.4.7 -->
   
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8" />
   <title>ATEM Connection</title>
-  <link rel="stylesheet" href="devicesettings.css" />
+  <link rel="stylesheet" href="modal-common.css">
 </head>
 <body>
   <div class="container">
@@ -96,15 +96,11 @@
         Restore on next startup
       </label>
     </div>
-
-    <div class="field-col">
+  </div>
+    <div class="modal-button-row modal-button-row-double">
       <button id="save-btn">Save</button>
-    </div>
-    <div class="field-col">
       <button id="close-btn">Cancel</button>
     </div>
-  </div>
-
   <script src="atemsettings.js"></script>
 </body>
 </html>
