--- a/devicesettings.html
+++ b/devicesettings.html
@@ -1,15 +1,15 @@
-﻿<!-- devicesettings.html 2.1.4 -->
+﻿<!-- devicesettings.html 2.4.7 -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
     <title>Device Settings</title>
-    <link rel="stylesheet" href="devicesettings.css">
+    <link rel="stylesheet" href="modal-common.css">
     <script src="devicesettings.js" defer></script>
 </head>
 <body>
-    <div class="section">
+    <div class="container">
         <h3>AUDIO</h3>
         <label for="editAudioMonitorDevice">PFL AUDIO MONITOR DEVICE</label>
         <select id="editAudioMonitorDevice"></select>
@@ -20,31 +20,35 @@
         <!--
         <label for="uvcAudioInputDevice">UVC INPUT AUDIO DEVICE</label>
         <select id="uvcAudioInputDevice"></select>-->
+
+        <!--
+        <div class="section">
+            <h3>VIDEO</h3>
+            <label for="fullscreenVideoOutputDevice">FULLSCREEN VIDEO OUTPUT DEVICE</label>
+            <select id="fullscreenVideoOutputDevice"></select>
+        </div> -->
     </div>
 
-    <!--
-    <div class="section">
-        <h3>VIDEO</h3>
-        <label for="fullscreenVideoOutputDevice">FULLSCREEN VIDEO OUTPUT DEVICE</label>
-        <select id="fullscreenVideoOutputDevice"></select>
-    </div> -->
+    <!-- ▼ Device Settings 用 OK ボタン行（薄いグレー枠の外） -->
+    <div class="device-button-row">
+        <button id="okButton">OK</button>
+    </div>
 
-    <button id="okButton">OK</button>
     <script>
         document.getElementById('okButton').addEventListener('click', () => {
             window.electronAPI.closeDeviceSettings(); // `preload.js` 経由で `main.js` に通知
         });
     </script>
 
-<!-- カスタムモーダル -->
-<div id="customConfirmModal" class="modal-overlay" style="display: none;">
-    <div class="modal-content">
-        <p id="customConfirmMessage"></p>
-        <div class="modal-buttons">
-            <button id="confirmOkButton">OK</button>
-            <button id="confirmCancelButton">Cancel</button>
+    <!-- カスタムモーダル（2.1.4 と同じ構造を復元） -->
+    <div id="customConfirmModal" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
+            <p id="customConfirmMessage"></p>
+            <div class="modal-buttons">
+                <button id="confirmOkButton">OK</button>
+                <button id="confirmCancelButton">Cancel</button>
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
