feat(devicesettings): add restore-on-startup option

--- a/devicesettings.html
+++ b/devicesettings.html
@@ -20,6 +20,12 @@
         <h3>UVC AUDIO MAPPING</h3>
         <div id="uvcAudioMappingContainer"></div>
 
+        <div class="field-col">
+            <label for="restoreOnStartup">
+                <input type="checkbox" id="restoreOnStartup" />
+                Restore on next startup
+            </label>
+        </div>
     </div>
 
     <div class="device-button-row">
