perf(devicesettings): speed up device enumeration and add loading indicator

--- a/devicesettings.html
+++ b/devicesettings.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     <div class="container">
+
+        <!-- デバイス列挙中に表示するローディングメッセージ -->
+        <div id="deviceLoadingMessage" class="device-loading-message">
+            Device Loading...
+        </div>
+
         <h3>AUDIO</h3>
         <label for="editAudioMonitorDevice">PFL AUDIO MONITOR DEVICE</label>
         <select id="editAudioMonitorDevice"></select>
