--- a/atemsettings.html
+++ b/atemsettings.html
@@ -1,4 +1,4 @@
-﻿ <!-- atemsettings.html 2.4.7 -->
+﻿ <!-- atemsettings.html 2.4.8 -->
   
 <!DOCTYPE html>
 <html>
@@ -6,41 +6,38 @@
   <meta charset="UTF-8" />
   <title>ATEM Connection</title>
   <link rel="stylesheet" href="modal-common.css">
+  <script src="labels.js"></script>
+  <script src="labelManager.js" defer></script>
 </head>
+
 <body>
   <div class="container">
-    <h2>ATEM Connection</h2>
+    <h2 data-label-id="atem-settings-title">ATEM Connection</h2>
 
     <div class="field-col">
       <label for="atem-control-enable">
         <input type="checkbox" id="atem-control-enable" />
-        VTR-PON → ATEM Control
+        <span data-label-id="atem-control-enable">VTR-PON → ATEM Control</span>
       </label>
     </div>
 
     <div class="field-col">
       <label for="atem-auto-switch-enable">
         <input type="checkbox" id="atem-auto-switch-enable" />
-        ATEM → VTR-PON Control
+        <span data-label-id="atem-auto-switch-enable">ATEM → VTR-PON Control</span>
       </label>
     </div>
 
     <div class="field-col">
-      <label for="atem-ip">IP Address</label>
-      <input
-        type="text"
-        id="atem-ip"
-        placeholder="e.g. 000.000.000.000"
-        pattern="[0-9\.]*"
-        inputmode="numeric"
-      />
+      <label for="atem-ip" data-label-id="atem-ip-address-label">IP Address</label>
+      <input type="text" id="atem-ip" />
     </div>
-    
+
     <div id="ip-error" class="field-error"></div>
     <div id="atem-status" class="field-error"></div>
 
     <div class="field-col">
-      <label for="atem-input">VTR-PON Input Number</label>
+      <label for="atem-input" data-label-id="atem-input-number-label">VTR-PON Input Number</label>
       <select id="atem-input">
         <option value="1">1</option>
         <option value="2">2</option>
@@ -86,20 +83,20 @@
     </div>
 
     <div class="field-col">
-      <label for="atem-delay">Switch Delay (ms)</label>
+      <label for="atem-delay" data-label-id="atem-switch-delay-label">Switch Delay (ms)</label>
       <input type="number" id="atem-delay" min="-9990" max="9990" step="10" />
     </div>
 
     <div class="field-col">
       <label for="restoreOnStartup">
         <input type="checkbox" id="restoreOnStartup" />
-        Restore on next startup
+        <span data-label-id="atem-restore-on-startup-label">Restore on next startup</span>
       </label>
     </div>
   </div>
     <div class="modal-button-row modal-button-row-double">
-      <button id="save-btn">Save</button>
-      <button id="close-btn">Cancel</button>
+      <button id="save-btn" data-label-id="atem-save-button">Save</button>
+      <button id="close-btn" data-label-id="atem-cancel-button">Cancel</button>
     </div>
   <script src="atemsettings.js"></script>
 </body>
