Add menu actions to enqueue SMPTE color bars, color checker, and standalone 1 kHz -18 dBFS test tone into the playlist

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!-- index.html 2.4.6 -->
+﻿<!-- index.html 2.5.0 -->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -23,6 +23,7 @@
     <script src="pptxtomp4.js" defer></script>
     <script src="movtowebm.js" defer></script>
     <script src="capture.js" defer></script>
+    <script src="testpattern.js"></script>
     <script src="renderer.js" defer></script>
 </head>
 <body>
