--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <button id="end-pause-button" class="button button-gray" data-label-id="end-pause-button"></button>
                     <button id="end-repeat-button" class="button button-gray" data-label-id="end-repeat-button"></button>
                     <button id="end-next-button" class="button button-gray" data-label-id="end-next-button"></button>
-                    <button id="end-goto-button" class="button button-gray" data-label-id="end-goto-button"></button>
+                    <!-- <button id="end-goto-button" class="button button-gray" data-label-id="end-goto-button"></button> -->
                     <button id="end-ftb-button" class="button button-gray" data-label-id="end-ftb-button"></button>
                 </div>
 
@@ -116,15 +116,7 @@
                         <div class="end-mode-row">
                             <div class="end-mode-row-label" data-label-id="end-mode-row-label-ftb"></div>
                             <div class="end-mode-row-fields">
-                                <input
-                                    type="number"
-                                    id="ftbRate"
-                                    min="0.1"
-                                    step="0.1"
-                                    value="1.0"
-                                    class="end-mode-input"
-                                    data-label-id="ftbRate"
-                                >
+                                <input type="number" id="ftbRate" min="0.1" step="0.1" value="1.0" class="end-mode-input" data-label-id="ftbRate">
                             </div>
                         </div>
 
@@ -132,37 +124,22 @@
                         <div class="end-mode-row">
                             <div class="end-mode-row-label" data-label-id="end-mode-row-label-repeat"></div>
                             <div class="end-mode-row-fields">
-                                <input
-                                    type="number"
-                                    id="repeatCount"
-                                    min="1"
-                                    step="1"
-                                    placeholder="∞"
-                                    class="end-mode-input"
-                                    data-label-id="repeatCount"
-                                >
-                                <select
-                                    id="end-repeat-endmode-select"
-                                    class="end-mode-select"
-                                    data-label-id="end-repeat-endmode-select"
-                                >
-                                    <option value="OFF">OFF</option>
+                                <input type="number" id="repeatCount" min="1" step="1" class="end-mode-input" data-label-id="repeatCount">
+                                <span id="repeatInfinityLabel" data-label-id="repeatInfinity"></span>
+                                <input type="checkbox" id="repeatInfinity" data-tooltip-id="repeatInfinity">
+                                <select id="end-repeat-endmode-select" class="end-mode-select" data-label-id="end-repeat-endmode-select">
                                     <option value="PAUSE">PAUSE</option>
+                                    <option value="OFF">OFF</option>
                                     <option value="NEXT">NEXT</option>
-                                    <option value="FTB">FTB</option>
                                 </select>
                             </div>
                         </div>
 
-                        <!-- Row 3: GOTO -->
+                        <!-- Row 3: GOTO
                         <div class="end-mode-row">
                             <div class="end-mode-row-label" data-label-id="end-mode-row-label-goto"></div>
                             <div class="end-mode-row-fields">
-                                <select
-                                    id="end-goto-playlist"
-                                    class="end-mode-select"
-                                    data-label-id="end-goto-playlist"
-                                >
+                                <select id="end-goto-playlist" class="end-mode-select" data-label-id="end-goto-playlist">
                                     <option value="0">NONE</option>
                                     <option value="1">Playlist 1</option>
                                     <option value="2">Playlist 2</option>
@@ -170,15 +147,11 @@
                                     <option value="4">Playlist 4</option>
                                     <option value="5">Playlist 5</option>
                                 </select>
-                                <select
-                                    id="end-goto-item"
-                                    class="end-mode-select"
-                                    data-label-id="end-goto-item"
-                                >
+                                <select id="end-goto-item" class="end-mode-select" data-label-id="end-goto-item">
                                     <option value="">NONE</option>
                                 </select>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
