Add statecontrol support for GOTO end mode config (endGotoPlaylist/endGotoItemId)

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <button id="end-pause-button" class="button button-gray" data-label-id="end-pause-button"></button>
                     <button id="end-repeat-button" class="button button-gray" data-label-id="end-repeat-button"></button>
                     <button id="end-next-button" class="button button-gray" data-label-id="end-next-button"></button>
-                    <!-- <button id="end-goto-button" class="button button-gray" data-label-id="end-goto-button"></button> -->
+                    <button id="end-goto-button" class="button button-gray" data-label-id="end-goto-button"></button>
                     <button id="end-ftb-button" class="button button-gray" data-label-id="end-ftb-button"></button>
                 </div>
 
@@ -135,7 +135,7 @@
                             </div>
                         </div>
 
-                        <!-- Row 3: GOTO
+                        <!-- Row 3: GOTO -->
                         <div class="end-mode-row">
                             <div class="end-mode-row-label" data-label-id="end-mode-row-label-goto"></div>
                             <div class="end-mode-row-fields">
@@ -151,7 +151,7 @@
                                     <option value="">NONE</option>
                                 </select>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
