playlist: remove slot 0, add autosave slots 1-7 (no backward compatibility)

--- a/index.html
+++ b/index.html
@@ -228,13 +228,13 @@
             <div id="playlistsave-area" class="playlistsave-area">
                 <div id="playlist-name-display" class="playlist-name-display" data-label-id="playlist-name-display"></div>
                 <div class="mode-controls">
-                    <button id="playlise-save-button" class="button control-button button-gray" data-tooltip-id="playlise-save-button" data-label-id="playlise-save-button"></button>
                     <button id="playlise1-button" class="button control-button button-gray" data-label-id="playlise1-button">1</button>
                     <button id="playlise2-button" class="button control-button button-gray" data-label-id="playlise2-button">2</button>
                     <button id="playlise3-button" class="button control-button button-gray" data-label-id="playlise3-button">3</button>
                     <button id="playlise4-button" class="button control-button button-gray" data-label-id="playlise4-button">4</button>
                     <button id="playlise5-button" class="button control-button button-gray" data-label-id="playlise5-button">5</button>
-                    <button id="playlisedel-button" class="button control-button button-gray" data-tooltip-id="playlisedel-button" data-label-id="playlisedel-button"></button>
+                    <button id="playlise6-button" class="button control-button button-gray" data-label-id="playlise6-button">6</button>
+                    <button id="playlise7-button" class="button control-button button-gray" data-label-id="playlise7-button">7</button>
                     <button id="playliseclear-button" class="button control-button button-gray" data-tooltip-id="playliseclear-button" data-label-id="playliseclear-button"></button>
                 </div>
             </div>
