Expand playlist slots from 7 to 9

--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
                     <button id="playlise5-button" class="button control-button button-gray" data-label-id="playlise5-button">5</button>
                     <button id="playlise6-button" class="button control-button button-gray" data-label-id="playlise6-button">6</button>
                     <button id="playlise7-button" class="button control-button button-gray" data-label-id="playlise7-button">7</button>
+                    <button id="playlise8-button" class="button control-button button-gray" data-label-id="playlise8-button">8</button>
+                    <button id="playlise9-button" class="button control-button button-gray" data-label-id="playlise9-button">9</button>
                     <button id="playliseclear-button" class="button control-button button-gray" data-tooltip-id="playliseclear-button" data-label-id="playliseclear-button"></button>
                 </div>
             </div>
